# stash2fs

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml  stash2fs.yml  stash2fs_plugin.py
_legacy/specs/: 01-architecture.md  02-configuration.md  03-stash-integration.md  04-templating.md  05-cli.md  06-plugin.md  07-media-types.md  08-error-handling-logging.md  AGENTS.md
_legacy/src/stash2fs/: __init__.py  __main__.py  logging.py
_legacy/src/stash2fs/cli/: gallery.py  image.py  main.py  scene.py
_legacy/src/stash2fs/config/: __init__.py  config.py  settings.py
_legacy/src/stash2fs/core/: models.py  mover.py  planner.py  templating.py  validation.py
_legacy/src/stash2fs/plugin/: __init__.py  io.py  runtime.py
_legacy/src/stash2fs/stash/: __init__.py  client.py  connection.py  queries.py
scripts/: build-plugin-bundle.sh
specs/: 00-overview.md  01-architecture.md  02-configuration.md  03-CLI.md  03-stash-api.md  04-Stash Plugin.md  04-cli.md  05-plugin.md  06-error-and-observability.md  AGENTS.md
specs/commands/: AGENTS.md  _global.md  gallery.md  image.md  scene.md
specs/commands/gallery/: bulk-mv.md  mv.md
specs/commands/image/: bulk-mv.md  mv.md
specs/commands/scene/: bulk-mv.md  mv.md
tests/: conftest.py  test_cli.py  test_config.py  test_mover.py  test_planner_validation.py  test_plugin.py  test_templating.py
tests/fixtures/: configuration.json  gallery_folder.json  gallery_zip.json  image.json  scene_multi_file.json
