[project]
name = "stash2fs"
version = "0.1.0"
description = "Organize Stash media files on disk using metadata-driven templates"
readme = "README.md"
authors = [
    { name = "Gustavo Campos", email = "guhcampos@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
stash2fs = "stash2fs.cli.main:cli"

[dependency-groups]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stash2fs"]

[tool.hatch.build.targets.sdist]
include = ["src/stash2fs", "stash2fs_plugin.py", "stash2fs.yml"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["references"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
